# wallet-processor-api

./: .env.example  .gitignore  README.md  Taskfile.yaml  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose-tests.yaml  docker-compose.yaml
app/: manage.py  pyproject.toml
app/src/api/: analytics.py  auth.py  transaction.py
app/src/api/depedencies/: analytic.py  auth.py  report.py  transaction_dependencies.py
app/src/core/: __init__.py  config.py  minio.py  permissions.py  repository.py  taskiq.py
app/src/excel/: file.py  report_generator.py
app/src/exceptions/: report.py
app/src/models/: __init__.py  report.py  user.py
app/src/repositories/: report.py  user.py
app/src/schemas/: auth.py  report.py  transaction_schemas.py  user_schemas.py
app/src/services/: analytics.py  auth_service.py  transaction.py  user.py
app/src/services/auth/: profile.py
app/src/services/tasks/: __init__.py
app/src/services/tasks/metrics/: metrics_calculator.py  metrics_service.py
app/src/settings/: analytics.py  broker.py  database.py  minio.py  redis.py
app/src/tests/: conftest.py
app/src/tests/auth/: conftest.py  test_auth.py
app/src/tests/users/: conftest.py  test_user_repository.py  test_user_service.py
app/src/utils/: jwt.py  token_handlers.py
docker/: Dockerfile  Dockerfile.prod  Dockerfile.tests
nginx/: nginx.conf
