[tool.poetry]
name = "task"
version = "0.1.0"
description = ""
authors = ["Author <author@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.37"
aiosqlite = "^0.20.0"
black = "^25.12.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
dotenv = "^0.9.9"
pydantic-settings = "^2.12.0"
asyncpg = "^0.31.0"
ruff = "^0.14.13"
pre-commit = "^4.5.1"
pyjwt = "^2.10.1"
pwdlib = {extras = ["argon2"], version = "^0.3.0"}
redis = "^7.1.0"
kombu = "^5.6.2"
taskiq-fastapi = "^0.4.0"
taskiq-aio-pika = "^0.6.0"
taskiq-redis = "^1.2.2"
fastapi-mail = "^1.6.1"
python-multipart = "^0.0.22"


[tool.poetry.group.dev.dependencies]
faker = "^19.10.0"
pylint = "^3.0.1"
pylint-pydantic = "^0.3.0"
pytest = "^7.4.2"
pytest-alembic = "^0.10.7"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-env = "^1.0.1"
pytest-httpx = "^0.26.0"
pytest-mock = "^3.11.1"
pytest-mock-server = "^0.3.0"
pytest-xdist = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = "120"
